@startuml
title Иерархия транспорта (Sealed + Enum)

interface EnginePowered {
  +Engine getEngine()
  +startEngine()
  +stopEngine()
}

enum FuelType {
  GASOLINE
  DIESEL
  JET_FUEL
  ELECTRIC
}

abstract class Transport <<sealed>> {
  - model: String
  - capacity: int
  + getMaxSpeed(): double
  + move(): void
  + basicInfo(): String
}

abstract class Engine <<sealed>> {
  - powerHP: int
  - running: boolean
  + start(): void
  + stop(): void
  + isRunning(): boolean
  + getPowerHP(): int
}

class CombustionEngine <<final>> {
  - fuelType: FuelType
}

class ElectricMotor <<final>> {
  - batteryKWh: double
}

class Car <<final>>
class ElectricCar <<final>>
class Airplane <<final>>
class Ship <<final>>
class Bicycle <<final>>

Transport <|-- Car
Transport <|-- ElectricCar
Transport <|-- Airplane
Transport <|-- Ship
Transport <|-- Bicycle

Engine <|-- CombustionEngine
Engine <|-- ElectricMotor

CombustionEngine --> FuelType
Car ..|> EnginePowered
ElectricCar ..|> EnginePowered
Airplane ..|> EnginePowered
Ship ..|> EnginePowered

Car --> CombustionEngine
ElectricCar --> ElectricMotor
Airplane --> CombustionEngine
Ship --> CombustionEngine

@enduml
